WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281992
SIGTRAP in WebCore::RenderFlexibleBox::marginBoxAscentForChild
https://bugs.webkit.org/show_bug.cgi?id=281992
Summary
SIGTRAP in WebCore::RenderFlexibleBox::marginBoxAscentForChild
p_choudhury
Reported
2024-10-23 10:35:12 PDT
rdar://137178953
Attachments
Add attachment
proposed patch, testcase, etc.
p_choudhury
Comment 1
2024-10-23 10:41:20 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35637
EWS
Comment 2
2024-10-28 13:39:47 PDT
Committed
285786@main
(6f3345017b97): <
https://commits.webkit.org/285786@main
> Reviewed commits have been landed. Closing PR #35637 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug