Cherry-pick 285786@main (6f3345017b97). https://bugs.webkit.org/show_bug.cgi?id=281992

SIGTRAP in WebCore::RenderFlexibleBox::marginBoxAscentForChild
    https://bugs.webkit.org/show_bug.cgi?id=281992
    rdar://137178953

    Reviewed by Alan Baradlay.

    Changed to use a combination of min and max to avoid any invalid range for the flexItem.

    * LayoutTests/fast/rendering/render-flexiblebox-margin-crash-expected.txt: Added.
    * LayoutTests/fast/rendering/render-flexiblebox-margin-crash.html: Added.
    * Source/WebCore/rendering/RenderFlexibleBox.cpp:
    (WebCore::RenderFlexibleBox::marginBoxAscentForFlexItem):

    Canonical link: https://commits.webkit.org/285786@main

Canonical link: https://commits.webkit.org/282416.259@webkitglib/2.46